--- a/app/src/main/res/layouts/BUS_SERVICE/layout/activity_bus_service_user_view_schedule.xml
+++ b/app/src/main/res/layouts/BUS_SERVICE/layout/activity_bus_service_user_view_schedule.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Aqua"
-    tools:context=".Bus_service.BusServiceUserViewSchedule">
+    android:background="@color/AliceBlue">
 
 
     <LinearLayout
