--- a/app/src/main/res/layouts/modules/layout/activity_bus_service.xml
+++ b/app/src/main/res/layouts/modules/layout/activity_bus_service.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Aqua"
+    android:background="@color/AliceBlue"
     tools:context=".Modules.BusService">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
